# petrosa-tradeengine

./: .bandit  .codecov.yml  .coveragerc  .cursor  .cursorrules  .env.example  .flake8  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .yamllint  .yamllint.yml  BINANCE_FUTURES_VALIDATION_REPORT.md  CODECOV_REVIEW_PR187.md  COMPLETE_SESSION_SUMMARY.md  COMPLETE_SUCCESS_SUMMARY.md  COVERAGE_PLAN.md  DEEP_LOGS_INVESTIGATION.md  Dockerfile  Dockerfile.fresh  Dockerfile.new  FINAL_LOGS_FIX.md  GEMINI.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LOGGING_ENHANCEMENTS_SUMMARY.md  LOGGING_FIX_EXPLANATION.md  LOGS_TROUBLESHOOTING.md  Makefile  README.md  REFERENCE.md  ROOT_CAUSE_SOLUTION_SUMMARY.md  TESTNET_OCO_VALIDATION_GUIDE.md  TESTNET_QUICK_START.md  TRADEENGINE_BUGS_FIX_SUMMARY.md  TRADING_CONFIG_SYSTEM_IMPLEMENTATION.md  VERIFICATION_GUIDE.md  bandit-report.json  coverage.json  env.example  (+22 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci-cd.yml  ci-checks.yml  copilot-review-gate.yml  debug_secret.yml  deploy.yml  manual-deploy.yml  request-copilot-review.yml
.serena/: project.yml
_bmad-output/delivery-summaries/: FIX-LOGGING-ERROR-summary.md
contracts/: order.py  signal.py  trading_config.py
docs/: ALERTING_SETUP.md  ARCHITECTURE.md  AUDIT_LOGGING.md  BINANCE_NOTIONAL_VALIDATION_FIX.md  BUG_INVESTIGATION_GUIDE.md  BUG_INVESTIGATION_QUICK_REFERENCE.md  BUG_INVESTIGATION_SUMMARY.md  BUSINESS_METRICS.md  CHECK_GRAFANA_LOKI.md  COMMIT_MESSAGE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONFIG_API_QUICK_REFERENCE.md  CONTRACTS.md  CRITICAL_FINDINGS.md  CURSOR_AI_VERSION_RULES.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_SUCCESS_NOTIONAL_FIX.md  DEPLOYMENT_SUCCESS_SUMMARY.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_VERIFICATION_SUCCESS.md  GRAFANA_DASHBOARD_IMPORT.md  GRAFANA_PROFILER_IMPLEMENTATION.md  HANDLER_DETACHMENT_ANALYSIS.md  HEDGE_MODE_IMPLEMENTATION_SUMMARY.md  HEDGE_MODE_POSITION_TRACKING.md  INDEX.md  LOCAL_PIPELINE.md  MANUAL_DEPLOYMENT_GUIDE.md  MULTI_STRATEGY_OCO_TRACKING.md  NATS_CONSUMER_FIX_SUMMARY.md  NETWORK_POLICY_FIX_SUMMARY.md  NOTIONAL_ROUNDING_FIX.md  NO_EXCHANGE_CONFIGURED_FIX.md  OBSERVABILITY_COMPLETE_SUMMARY.md  OCO_IMPLEMENTATION_COMPLETE.md  OCO_IMPLEMENTATION_SUMMARY.md  OCO_QUICK_TEST_GUIDE.md  PR75_READY_TO_MERGE.md  PROPER_CI_CD_DEPLOYMENT_SUCCESS.md  (+20 more)
docs/runbooks/: algo-order-accumulation.md  daily-loss-approaching-limit.md  excessive-risk-rejections.md  extreme-execution-latency.md  high-order-failure-rate.md  order-success-rate-degradation.md  position-reconciliation-divergence.md  position-size-near-limit.md  unhedged-positions.md
examples/: README.md  advanced_trading_example.py  constants_usage.py  publish_signal.py
gemini-notes/: TESTING_IMPROVEMENT_PLAN.md
infra/: README.md
k8s/: common-configmap.yaml  configmap.yaml  deployment-local.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kubeconfig.yaml  mysql-schema-init-simple.yaml  mysql-schema-job.yaml  networkpolicy-allow-egress.yaml  networkpolicy-allow-ingress.yaml  service.yaml  strategy-positions-schema-job.yaml
scripts/: bandit-wrapper.sh  bug-investigation.sh  bump-version.sh  check-min-notional.py  check-mongodb.py  check-pipeline.sh  check-position-status.py  check-test-assertions.py  check_current_orders.py  check_current_state.py  check_operations_simple.py  check_operations_tables.py  close-test-position.py  close_all_binance_positions.py  close_unhedged_positions.py  create-database-schema.sql  create-release.sh  create_positions_table.sql  create_strategy_positions_table.sql  debug-handler-lifecycle.py  debug_api_error_fix.py  deploy-with-mysql-init.sh  deployment_readiness_test.py  dev-setup.sh  fresh_start.py  get_real_price.py  implement_oco_logic.py  import-grafana-dashboard.sh  install-git-hooks.sh  live_oco_test.py  live_oco_test_with_position.py  local-pipeline.sh  manual_sltp_placement.py  open-test-position.py  pre-commit-version-check.sh  query_binance_positions.py  reset_and_start_fresh.py  resolve-copilot-comments.py  run-futures-test.sh  run-with-handler-monitoring.py  (+46 more)
scripts/migrations/: 001_trading_configs.sql  001_trading_configs_mongodb.py  002_positions_index_optimization.sql
shared/: audit.py  config.py  constants.py  distributed_lock.py  logger.py  mysql_client.py  retry.py
tests/: __init__.py  conftest.py  otel_cleanup.py  test_460_check_before_place.py  test_461_shadow_compare_mode.py  test_algo_order_limits.py  test_api.py  test_api_config_routes_comprehensive.py  test_api_config_validation.py  test_api_filter_routes.py  test_api_lifespan_integration.py  test_api_lifespan_minimal_mock.py  test_api_line_coverage.py  test_api_startup_logging.py  test_atomic_rollback.py  test_atomic_rollback_zero_qty.py  test_binance_4130_reconciliation.py  test_binance_exchange_comprehensive.py  test_breach_envelope_schema.py  test_business_metrics.py  test_cancel_oco_pair_algo_api.py  test_cio_state.py  test_close_unhedged_positions_script.py  test_complete_logging_integration.py  test_config.py  test_config_comprehensive.py  test_config_manager_comprehensive.py  test_configure_logging_simple.py  test_constants.py  test_consumer.py  test_contracts.py  test_data_manager_boot_probe.py  test_data_manager_client_comprehensive.py  test_data_manager_config_client.py  test_data_manager_position_client.py  test_decision_id_propagation.py  test_defaults.py  test_dispatcher.py  test_dispatcher_close_guard.py  test_dispatcher_comprehensive.py  (+65 more)
tests/integration/: __init__.py  fakes.py  test_distributed_locks.py  (+5 more)
tradeengine/: __init__.py  api.py  api_config_routes.py  api_filter_routes.py  api_metrics_routes.py  config_manager.py  consumer.py  consumer_patched.py  defaults.py  dispatcher.py  exchange_truth_store.py  leverage_bound_guard.py  leverage_manager.py  metrics.py  naked_position_remediator.py  order_manager.py  position_health_guard.py  position_manager.py  position_reconciler.py  signal_aggregator.py  strategy_position_manager.py  strategy_position_reconciler.py  thrash_guard.py
(+62 files in other folders)
